[gd_scene load_steps=8 format=2]

[ext_resource path="res://CODE/ENEMIES/BASIC/Enemy1.gd" type="Script" id=1]
[ext_resource path="res://ASSETS/ENEMIES/first/GAMEREADYenemywalk(1).png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "sprint"
length = 0.571429
step = 0.0714286
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0714286, 0.142857, 0.214286, 0.285714, 0.357143, 0.428571, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 15, 7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 0.615385
step = 0.0769231
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0769231, 0.153846, 0.230769, 0.307692, 0.384615, 0.461538, 0.538462 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 29.8565, 49.3556 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 401.428, 202.901 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 23.6353, 65.9895 )

[node name="Enemy1" type="KinematicBody2D"]
position = Vector2( 0, 3 )
collision_layer = 16
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 2
hframes = 8
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/sprint = SubResource( 1 )
anims/walk = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16.6865 )
shape = SubResource( 3 )

[node name="RayCast2DPit" type="RayCast2D" parent="."]
position = Vector2( 30.01, 0 )
enabled = true
cast_to = Vector2( 0, 66.272 )

[node name="RayCast2DWall" type="RayCast2D" parent="."]
position = Vector2( 29, -1 )
rotation = -1.57079
enabled = true
cast_to = Vector2( 0, 4 )

[node name="sight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="sight"]
position = Vector2( -0.093956, -47.223 )
shape = SubResource( 4 )

[node name="bodyKncokBackArea" type="Area2D" parent="."]

[node name="hurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
shape = SubResource( 5 )
[connection signal="body_entered" from="sight" to="." method="_on_sight_body_entered"]
[connection signal="body_exited" from="sight" to="." method="_on_sight_body_exited"]
[connection signal="body_entered" from="bodyKncokBackArea" to="." method="_on_bodyKncokBackArea_body_entered"]
[connection signal="area_entered" from="hurtBox" to="." method="_on_hurtBox_area_entered"]
